--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -67,7 +67,7 @@
         </section>
     </div>
     <div class="compareButton">
-        <button type="submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling">Compare</button>
+        <button type="submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling" role="button">Compare</button>
         <!-- <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="goBack()">Back</button> -->
     </div>
     <div class="compareDetails" role="complementary"><span itemscope itemtype="https://schema.org/Question">
