--- a/html/sliderQuestions.html
+++ b/html/sliderQuestions.html
@@ -28,7 +28,7 @@
     <div>
         <h2 role="heading">Let's find few best neigborhoods for you</h2>
         <!-- multistep form -->
-        <form id="msform">
+        <form id="msform" role=form>
             <!-- progressbar -->
             <ul id="progressbar">
                 <li class="active">1</li>
@@ -38,50 +38,50 @@
             </ul>
             <!-- fieldsets -->
             <fieldset class="lf-card-2">
-                <h3 class="fs-title">Which activity interests you the most?</h3>
-                  <input id="q1o1" class="q1 selector" type="radio" name="activity" value="Outdoor Activities"/>
+                <h3 class="fs-title" role="heading">Which activity interests you the most?</h3>
+                  <input id="q1o1" class="q1 selector" type="radio" name="activity" value="Outdoor Activities" 	role=radio/>
                   <label for="q1o1">Outdoor Activities</label><br>
-                  <input id="q1o2" class="q1 selector" type="radio" name="activity" value="movies"/>
+                  <input id="q1o2" class="q1 selector" type="radio" name="activity" value="movies" 	role=radio/>
                   <label for="q1o2">Watching Movies</label><br>
-                  <input id="q1o3" class="q1 selector" type="radio" name="activity" value="bar-hopping"/>
+                  <input id="q1o3" class="q1 selector" type="radio" name="activity" value="bar-hopping" 	role=radio/>
                   <label for="q1o3">Bar Hopping</label><br>
-                  <input id="q1o4" class="q1 selector" type="radio" name="activity" value="foodie"/>
+                  <input id="q1o4" class="q1 selector" type="radio" name="activity" value="foodie" 	role=radio/>
                   <label for="q1o4">Trying Different Cuisines</label><br>
             </fieldset>
             <fieldset class="lf-card-2">
-                <h3 class="fs-title">Do you have kids?</h3>
-                <input id="q2o1" class="q2 selector" type="radio" name="kids" value="YES"/>
+                <h3 class="fs-title" role="heading">Do you have kids?</h3>
+                <input id="q2o1" class="q2 selector" type="radio" name="kids" value="YES" 	role=radio/>
                 <label for="q2o1">Yes</label><br/>
-                <input id="q2o2" class="q2 selector" type="radio" name="kids" value="NO"/>
+                <input id="q2o2" class="q2 selector" type="radio" name="kids" value="NO" 	role=radio/>
                 <label for="q2o2">No</label><br/>
-                <input id="q2o3" class="q2 selector" type="radio" name="kids" value="NA"/>
+                <input id="q2o3" class="q2 selector" type="radio" name="kids" value="NA" 	role=radio/>
                 <label for="q2o3">N/A</label><br/>
                 <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
             </fieldset>
             <fieldset class="lf-card-2">
-                <h3 class="fs-title">Please share your income range?</h3>
-                <input id="q3o1" class="q3 selector" type="radio" name="income" value="10-30"/>
+                <h3 class="fs-title" role="heading">Please share your income range?</h3>
+                <input id="q3o1" class="q3 selector" type="radio" name="income" value="10-30" role=radio/>
                 <label for="q3o1">10-30k</label><br/>
-                <input id="q3o2" class="q3 selector" type="radio" name="income" value="30-60"/>
+                <input id="q3o2" class="q3 selector" type="radio" name="income" value="30-60" role=radio/>
                 <label for="q3o2">30-60k</label><br/>
-                <input id="q3o3" class="q3 selector" type="radio" name="income" value="60-90"/>
+                <input id="q3o3" class="q3 selector" type="radio" name="income" value="60-90" role=radio/>
                 <label for="q3o3">60-90k</label><br/>
-                <input id="q3o4" class="q3 selector" type="radio" name="income" value="90+"/>
+                <input id="q3o4" class="q3 selector" type="radio" name="income" value="90+" role=radio/>
                 <label for="q3o4">90+k</label><br/>
                 <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
             </fieldset>
             <fieldset id='lastQue' class="lf-card-2">
-                <h3 class="fs-title">How often do you use public transportion?</h3>
-                <input id="q4o1" class="q4" type="radio" name="transportation" value="DAILY"/>
+                <h3 class="fs-title" role="heading">How often do you use public transportion?</h3>
+                <input id="q4o1" class="q4" type="radio" name="transportation" value="DAILY" role=radio/>
                 <label for="q4o1">Very Often</label><br/>
-                <input id="q4o2" class="q4" type="radio" name="transportation" value="ONCE A WEEK"/>
+                <input id="q4o2" class="q4" type="radio" name="transportation" value="ONCE A WEEK" role=radio/>
                 <label for="q4o2">Sometimes</label><br/>
-                <input id="q4o3" class="q4" type="radio" name="transportation" value="FEW DAYS IN A WEEK"/>
+                <input id="q4o3" class="q4" type="radio" name="transportation" value="FEW DAYS IN A WEEK" role=radio/>
                 <label for="q4o3">Often</label><br/>
-                <input id="q4o4" class="q4" type="radio" name="transportation" value="NA"/>
+                <input id="q4o4" class="q4" type="radio" name="transportation" value="NA" role=radio/>
                 <label for="q4o4">N/A</label><br/>
                 <i class="fa fa-chevron-circle-left previous action-button fa-lg" aria-hidden="true"></i>
-                <button class="lf-button lf-button-brand  lf-padding-large  lf-large buttonStyling submit"  onclick="location.href='SuggestionsPage.html';">Suggest Me</button>
+                <button class="lf-button lf-button-brand  lf-padding-large  lf-large buttonStyling submit"  onclick="location.href='SuggestionsPage.html';" role="button">Suggest Me</button>
             </fieldset>
         </form>
     </div>
