--- a/html/team.html
+++ b/html/team.html
@@ -56,7 +56,7 @@
      </figure>
      <figure class="snip0016">
       <img itemprop="image" src="../image/team/rachel.jpg" alt="Rachel" role="img"/>
-            <fi
+            <figcaption>
               <h2 itemprop="name">Rachel</h2>
               <p itemprop="jobTitle">Web Designer</p>
             </figcaption>
