change view house to view homes on button

--- a/html/neighborDetail.html
+++ b/html/neighborDetail.html
@@ -101,7 +101,7 @@
           </table>
           <div class="footer">
               <button id="compareBtn" class="button"><i class="fa fa-balance-scale lf-hover-opacity "></i>Compare</button>
-              <button id="viewHouseBtn" class="button"><i class="fa fa-eye" aria-hidden="true"></i>View House</button>
+              <button id="viewHouseBtn" class="button"><i class="fa fa-eye" aria-hidden="true"></i>View Homes</button>
               <button id="backBtn" class="button"><i class="fa fa-arrow-left" aria-hidden="true"></i>back</button>
           </div>
         </article>
