update back to top

--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -94,8 +94,9 @@
                 </div>
             </div>
             <div class="text-center">
-                <br/>
-                <span><a href="#suggestionNames" class="lf-button lf-button-brand lf-small-margin">TOP</a></span>
+                <!--  <br/>
+               <span><a href="#suggestionNames" class="lf-button lf-button-brand lf-small-margin">TOP</a></span> -->
+               <p id="backtotop"><a href="#suggestionNames">Back To Top </a></p>
             </div>
         </div>
     </div>
