--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -32,6 +32,7 @@
     <div class="heading">
         <h2 role="heading">Let's Compare the neighborhoods</h2>
     </div>
+    <form>
     <div class="compareContainer" role="main">
         <section>
             <img itemprop="photo" itemscope itemtype="http://schema.org/photo" id="leftImg" src="../image/fremont.jpg" alt="NeighborhoodImage1" required aria-required="true">
@@ -48,7 +49,7 @@
                     <option itemprop="name" value="Northgate"></option>
                     <option itemprop="name" value="Alki"></option>
             </datalist> -->
-            <select  id="leftInput" id="neighborhoods1" name="neighborhoodNames" required>
+            <select required id="leftInput" id="neighborhoods1" name="neighborhoodNames">
               <p id="errorMessage1" aria-hidden=true></p>
                 <option value="" disabled selected>Select a Neighborhood</option>
                 <option value="Queen Anne">Queen Anne</option>
@@ -76,7 +77,7 @@
                 <option itemprop="name" value="Northgate"></option>
                 <option itemprop="name" value="Alki"></option>
             </datalist> -->
-            <select  id="rightInput" id="neighborhoods2" name="neighborhoodNames" required>
+            <select required id="rightInput" id="neighborhoods2" name="neighborhoodNames">
               <p id="errorMessage2" aria-hidden=true></p>
                 <option value="" disabled selected>Select a Neighborhood</option>
                 <option value="Queen Anne">Queen Anne</option>
@@ -91,7 +92,7 @@
         </section>
     </div>
     <div class="compareButton">
-        <button type="submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling" role="button">Compare</button>
+        <button type="submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling" role="button" onclick="setValues()">Compare</button>
         <!-- <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="goBack()">Back</button> -->
     </div>
     <div class="compareDetails" role="complementary"><span itemscope itemtype="https://schema.org/Question">
