I think we are not using this stylesheet any more

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
      <!-- end -->
     <link rel="stylesheet" type="text/css" href="./css/index.css" />
     <link rel="stylesheet" type="text/css" href="./css/slide.css" />
-    
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">    
+
+    <!-- <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
@@ -26,7 +26,7 @@
 
     <!--Other Scripts-->
     <script type="text/javascript" src="./js/slide.js"></script>
-    
+
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage">
@@ -40,7 +40,7 @@
         </div>
         <div class="icon" id="right"><i class="fa fa-angle-right"></i></div>
     </main>
-    <article id="indexSub" class="lf-bg">       
+    <article id="indexSub" class="lf-bg">
         <div class="card-container desktopLayout">
             <section class="lf-card-2">
                 <figure><img src="./image/seattle.jpg" alt="Get Suggestion for a neighborhood" /></figure>
