--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="keywords" content="local,neighborhood,seattle">
     <title>Locale Finder: Our Suggestions</title>
     <!--Common Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
@@ -23,7 +22,9 @@
 
     <!-- Header Footer Load Script -->
     <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
-     
+    
+    <!--Other Scripts -->
+    <script type="text/javascript" src="../js/neighborDetail.js"></script>     
 </head>
 
 <body>
