--- a/html/map.html
+++ b/html/map.html
@@ -36,7 +36,7 @@
             <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Capitol Hill">Capitol Hill</a></h3>
             <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Downtown">Downtown</a></h3>
             <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Alki">Alki</a></h3>
-            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Belltown">Belltown</a></h3>
+            <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=Green Lake">Green Lake</a></h3>
             <h3 itemprop="accessibilityAPI"><a href="neighborDetail.html?name=South Lake Union">South Lake Union</a></h3>
         </div>
     </div>
